--- a/Checkout Kata/CheckoutKata.csproj
+++ b/Checkout Kata/CheckoutKata.csproj
@@ -43,9 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemDetail.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScanItems.cs" />
     <Compile Include="SpecialOffers.cs" />
   </ItemGroup>
   <ItemGroup>
